Added config loading, and imgur search too

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     </div>
     <input style="display:none" id="clippp"/>
     <script>
+      window.$ = window.jQuery = require('jquery');
       require('./src/page.js');
     </script>
   </body>
